formalism and authentication - google sign in auth - design changes to adapt to auth button - added formalism models - cleaning up and switiching back to old model and prompt

--- a/lct_app/index.html
+++ b/lct_app/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live Conversational Threads</title>
+    
+    <!-- KaTeX CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.css" integrity="sha384-GvrOXuhMATgEsSwCs4smul74iXGOixntILdUW9XmUC6+HX0sLNAK3q71HotJqlAn" crossorigin="anonymous">
+    
+    <!-- KaTeX JavaScript -->
+    <script defer src="https://cdn.jsdelivr.net/npm/katex@0.16.8/dist/katex.min.js" integrity="sha384-ABt0878yn6n7alrxpGbbqR+UIpsEo8ZT/Hq2Ct/oVx9XkypBuCngYaoOg1+4ua" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
